--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:dev:cat": "nest start cat --watch",
+    "start:dev:dog": "nest start dog --watch",
     "start:debug": "nest start --debug --watch",
+    "start:debug:cat": "nest start cat --debug --watch",
     "start:prod": "node dist/apps/nest_review/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -20,10 +23,13 @@
     "test:e2e": "jest --config ./apps/nest_review/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.8",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
