--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-themes": "^1.4.3",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20"
   },
